done: all swagger documentation
