# app/Http/Controllers/Auth/RegisterController.php
@@ -8,11 +8,80 @@ use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Annotations as OA;
 
 class RegisterController extends Controller
 {
     /**
      * Handle the incoming request.
+     *
+     * @OA\Post(
+     *      path = "/api/register",
+     *      summary = "Register",
+     *      tags={"Auth"},
+     *
+     *      @OA\RequestBody(
+     *
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *
+     *              @OA\Schema(
+     *
+     *                  @OA\Property(
+     *                      property="name",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="email",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="password",
+     *                      type="string"
+     *                  ),
+     *                  example={"name": "John Doe", "email": "john@test.com", "password": "password"}
+     *              )
+     *          )
+     *      ),
+     *
+     *      @OA\Response(
+     *          response = 401,
+     *          description = "Validation error"
+     *      ),
+     *      @OA\Response(
+     *          response = 500,
+     *          description = "Internal server error"
+     *      ),
+     *      @OA\Response(
+     *          response = 200,
+     *          description = "User Created Successfully",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Schema(
+     *
+     *                  @OA\Property(
+     *                      property="status",
+     *                      type="boolean"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="message",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="token",
+     *                      type="string"
+     *                  ),
+     *              ),
+     *
+     *              @OA\Examples(
+     *                  example = "result",
+     *                  value = {"status": true, "message": "User Created Successfully", "token": "6|ZtL5S6oXw66EMH3fSpJAJM6Yab38ygdGqHCIwM6Xbc93cc5a"},
+     *                  summary = "An result object"
+     *              )
+     *          )
+     *      )
+     * )
      */
     public function __invoke(Request $request)
     {
