# app/Http/Controllers/Post/PostCreateController.php
@@ -8,11 +8,81 @@ use App\Models\Post;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Annotations as OA;
 
 class PostCreateController extends Controller
 {
     /**
      * Handle the incoming request.
+     *
+     * @OA\Post(
+     *      path = "/api/posts",
+     *      summary = "Create a new post",
+     *      tags={"Post"},
+     *      security={ {"sanctum": {} }},
+     *
+     *      @OA\RequestBody(
+     *
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *
+     *              @OA\Schema(
+     *
+     *                  @OA\Property(
+     *                      property="title",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="description",
+     *                      type="string"
+     *                  ),
+     *                  example={"title": "Test post", "description": "Test description"}
+     *              )
+     *          )
+     *      ),
+     *
+     *      @OA\Response(
+     *          response = 401,
+     *          description = "Validation error"
+     *      ),
+     *      @OA\Response(
+     *          response = 500,
+     *          description = "Internal server error"
+     *      ),
+     *      @OA\Response(
+     *          response = 200,
+     *          description = "Create a new post",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Schema(
+     *
+     *                  @OA\Property(
+     *                      property="id",
+     *                      type="string",
+     *                  ),
+     *                  @OA\Property(
+     *                      property="title",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="description",
+     *                      type="string"
+     *                  ),
+     *              ),
+     *
+     *              @OA\Examples(
+     *                  example = "A new post created",
+     *                  value = {
+     *                      "id": 1,
+     *                      "title": "Test post",
+     *                      "description": "Test description"
+     *                  },
+     *                  summary = "A new post created"
+     *              )
+     *          )
+     *      )
+     * )
      */
     public function __invoke(Request $request)
     {
@@ -27,7 +97,7 @@ class PostCreateController extends Controller
                     'status' => false,
                     'message' => 'validation error',
                     'errors' => $validatePost->errors(),
-                ], 400);
+                ], 401);
             }
 
             $post = new Post;
